# voize

./: .gitignore  .pre-commit-config.yaml  INTERVIEW_CHEAT_SHEET.md  Makefile  QUICK_REFERENCE.md  README_CICD_SETUP.md  README_LOCAL_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  pr-check.yml
data-pipeline/: DATA_SCIENCE_JOURNEY_PRESENTATION.md  INTERVIEW_CHEAT_SHEET.md  analyze_features.py  clean.py  dag_scheduler.py  explore.py  ml_dags.py  model_comparison.py  optimize_multinomial_nb.py  preprocess.py  test_feature_selection.py  test_feature_subsets.py  train_optimized_model.py
docs/: CICD.md  MODEL_DEPLOYMENT.md  MONITORING.md
infrastructure/docker/: Dockerfile.api
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/load_testing/: main.tf  variables.tf
infrastructure/terraform/modules/monitoring/: main.tf  variables.tf
scripts/: check-gcs-models.py  deploy.sh  setup-cicd.sh  test-local.sh  upload-models-to-gcs.py
src/: api.py
src/inference/: api.py  feature_engine.py
src/monitoring/: __init__.py  business_metrics.py  prediction_logger.py
src/utils/: test_client.py
tests/: test_monitoring.py
tests/integration/: test_api_integration.py
tests/unit/: test_api.py
